Some english mispelling

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         </div>
       </div>
     </div>
-    <div class="footer">Yes, I buyed this template, I'm a programmer, not a designer!</div>
+    <div class="footer">Yes, I bought this template, I'm a programmer, not a designer!</div>
     <!-- JQUERY -->
     <script src="js/jquery.min.js"></script>
     <!-- BOOTSTRAP -->
