--- a/index.html
+++ b/index.html
@@ -37,11 +37,14 @@
               <div class="item-skills" data-percent="0.65">Java</div>
               <div class="item-skills" data-percent="0.50">C#</div>
               <div class="item-skills" data-percent="0.45">Python</div>
+              <div class="item-skills" data-percent="0.30">Django</div>
               <div class="item-skills" data-percent="0.60">PHP</div>
+              <div class="item-skills" data-percent="0.70">SQL</div>
               <div class="item-skills" data-percent="0.60">HTML5</div>
               <div class="item-skills" data-percent="0.60">CSS3</div>
               <div class="item-skills" data-percent="0.65">JavaScript</div>
               <div class="item-skills" data-percent="0.40">AngularJS</div>
+              <div class="item-skills" data-percent="0.40">Knockout</div>
               <div class="item-skills" data-percent="0.70">jQuery</div>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
