Adding hobbie and link to bootstrap theme

--- a/index.html
+++ b/index.html
@@ -167,13 +167,14 @@
             <div class="hobby">Programming</div>
             <div class="hobby">Games</div>
             <div class="hobby">Books</div>
+            <div class="hobby">Board Games Collector</div>
             <div class="hobby">More Programming</div>
             <div class="hobby">Movies</div>
           </div>
         </div>
       </div>
     </div>
-    <div class="footer">Yes, I bought this template, I'm a programmer, not a designer!</div>
+    <div class="footer"><a href="https://wrapbootstrap.com/theme/3colorresume-personal-resume-cv-WB0265951" target="_blank">Yes, I bought this template, I'm a programmer, not a designer!</a></div>
     <!-- JQUERY -->
     <script src="js/jquery.min.js"></script>
     <!-- BOOTSTRAP -->
