Editing some contents

--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <!-- ABOUT ME -->
           <div class="box">
             <h2>About Me</h2>
-            <p>I'm a passionate programmer that always gets excited to work with new projects and new technologies. I'm a quick learner and a self-learner, I love challenges that can struggle me to resolve.</p>
-            <p>In my free time I enjoy making games, playing others and read some tech/fiction books.</p>
+            <p>I'm a passionate programmer that always gets excited to work with new projects and new technologies. I'm a quick and a self-learner, and I also love a challenge which makes me struggle to resolve.</p>
+            <p>In my free time I enjoy making games, playing board games and reading some tech/fiction books.</p>
           </div>
           <!-- CONTACT -->
           <div class="box clearfix">
