Insert of the certificate in python and some github projects.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,55 @@
             <h2>Skills</h2>
             <div class="skills">
               <div class="item-skills" data-percent="0.65">Java</div>
+                <ul class="item-skills-detail">
+                    <li><a href="https://github.com/panoramix360/erp-faculdade-infnet" target="_blank">ERP - College Project</a><br />
+                        <span class="project-detail">A project for the college to study the concepts of Java.</span></li>
+                </ul>
               <div class="item-skills" data-percent="0.50">C#</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.45">Python</div>
+                <ul class="item-skills-detail">
+                    <li><a href="https://github.com/panoramix360/pragmatic-programmer-exercises" target="_blank">Pragmatic Programmer Exercises</a><br />
+                        <span class="project-detail">Some exercises that I made for the Pragmatic Programmer book.</span></li>
+                    <li><a href="img/CertificateMIT.pdf" target="_blank">6.00.1x: Introduction to Computer Science and Programming Using Python</a><br />
+                        <span class="project-detail">A course that I made to advance my skills in Python.</span></li>
+                </ul>
               <div class="item-skills" data-percent="0.30">Django</div>
+                <ul class="item-skills-detail">
+                    <li><a href="https://github.com/panoramix360/catalogo-filmes" target="_blank">Movie Catalog</a><br />
+                        <span class="project-detail">A project that I started to learn more about the Django Framework.</span></li>
+                </ul>
               <div class="item-skills" data-percent="0.60">PHP</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.70">SQL</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.60">HTML5</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.60">CSS3</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.65">JavaScript</div>
+                <ul class="item-skills-detail">
+                    <li><a href="https://github.com/panoramix360/flappy-geometric" target="_blank">Flappy Geometric</a><br />
+                        <span class="project-detail">A game that I made for the <a href="http://itch.io/jam/flappyjam" target="_blank">Flappy Jam</a> just for fun.</span></li>
+                    <li><a href="https://github.com/panoramix360/JavascriptTabs" target="_blank">JavaScript Tabs</a><br />
+                        <span class="project-detail">A plugin to put content in tabs made only with JavaScript without frameworks.</span></li>
+                </ul>
               <div class="item-skills" data-percent="0.40">AngularJS</div>
+                <ul class="item-skills-detail">
+                    <li><a href="https://github.com/panoramix360/forum-ihc" target="_blank">Forum</a><br />
+                        <span class="project-detail">A mini bulletin board to play with the AngularJS.</li>
+                </ul>
               <div class="item-skills" data-percent="0.40">Knockout</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="item-skills" data-percent="0.70">jQuery</div>
+                <ul class="item-skills-detail">
+                </ul>
               <div class="skills-legend clearfix">
                 <div class="legend-left legend">Beginner</div>
                 <div class="legend-left legend"><span>Proficient</span></div>
