Change of the link in Javascript Tabs.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <ul class="item-skills-detail">
                     <li><a href="https://github.com/panoramix360/flappy-geometric" target="_blank">Flappy Geometric</a><br />
                         <span class="project-detail">A game that I made for the <a href="http://itch.io/jam/flappyjam" target="_blank">Flappy Jam</a> just for fun.</span></li>
-                    <li><a href="https://github.com/panoramix360/JavascriptTabs" target="_blank">JavaScript Tabs</a><br />
+                    <li><a href="https://github.com/panoramix360/pure-javascript-tabs" target="_blank">Pure JavaScript Tabs</a><br />
                         <span class="project-detail">A plugin to put content in tabs made only with JavaScript without frameworks.</span></li>
                 </ul>
               <div class="item-skills" data-percent="0.40">AngularJS</div>
