--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li><a href="https://github.com/panoramix360/erp-faculdade-infnet" target="_blank">ERP - College Project</a><br />
                         <span class="project-detail">A project for the college to study the concepts of Java.</span></li>
                 </ul>
-              <div class="item-skills" data-percent="0.50">C#</div>
+              <div class="item-skills" data-percent="0.50">C##</div>
                 <ul class="item-skills-detail">
                 </ul>
               <div class="item-skills" data-percent="0.45">Python</div>
